force-app/src/objects/cpm__Transaction_Sub_Element__c.object
<CustomObject>
    <fields>
        <fullName>cpm__Actual_Amount__c</fullName>
        <formula>if ( ISPICKVAl( cpm__Credit_Debit__c, &quot;Debit&quot;), cpm__Amount__c * -1 , cpm__Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__Cost_Bearer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Bearer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transaction Sub Elements</relationshipLabel>
        <relationshipName>Transaction_Sub_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Credit_Debit__c</fullName>
        <label>Credit/Debit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Party__c</fullName>
        <label>Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__ProcessingHub_Id__c</fullName>
        <externalId>true</externalId>
        <label>ProcessingHub Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Ignored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Transaction__c</fullName>
        <label>Transaction</label>
        <referenceTo>cpm__Transaction__c</referenceTo>
        <relationshipLabel>Transaction Sub Elements</relationshipLabel>
        <relationshipName>Transaction_Sub_Elements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cpm__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Transaction Sub Element</label>
    <nameField>
        <displayFormat>TSE-{0}</displayFormat>
        <label>Transaction Sub Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Sub Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>